# varnish

./: .gitignore  .gitmodules  CONTRIBUTING.md  INSTALL  LICENSE  Makefile.am  README.Packaging  README.md  README.rst  autogen.des  configure.ac  flint.lnt  vinyl-legacy.m4  vinyl.m4  vinylapi-uninstalled.pc.in  vinylapi.pc.in  vtc.am  wflags.py
.circleci/: config.yml
.forgejo/: pull_request_template.md
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: check.yml  cifuzz.yml
contrib/: Makefile.am
contrib/tests/: statdiff_b00000.vtc
doc/: README.WRITING_RST.rst  changes.rst
doc/sphinx/: Makefile.am  conf.py.in  index.rst
doc/sphinx/_static/: LICENSE.txt  custom.css
doc/sphinx/_static/fonts/: LICENSE.txt
doc/sphinx/dev-guide/: homepage_contrib.rst  homepage_dogfood.rst  index.rst  who.rst
doc/sphinx/glossary/: index.rst
doc/sphinx/installation/: bugs.rst  help.rst  index.rst  install.rst  install_debian.rst  install_freebsd.rst  install_redhat.rst  install_source.rst  platformnotes.rst
doc/sphinx/phk/: backends.rst  quic.rst  trialerror.rst
doc/sphinx/reference/: cli_protocol.rst  index.rst  states.rst  varnish-cli.rst  varnishd.rst  varnishhist.rst  varnishlog-json.rst  varnishlog.rst  varnishncsa.rst  varnishstat.rst  varnishtop.rst  vcl-backend.rst  vcl-probe.rst  vcl-step.rst  vcl-var.rst  vcl.rst  vcl_step.rst  vcl_var.rst  vinyl-cli.rst  vinyl-counters.rst  vinyladm.rst  vinyld.rst  vinylhist.rst  vinyllog.rst  vinylncsa.rst  vinylstat.rst  vinyltest.rst  vinyltop.rst  vmod.rst  vsl-query.rst  vsl.rst  vsm.rst  vtc.rst  vtla.rst
doc/sphinx/tutorial/: backend_servers.rst  index.rst  introduction.rst  peculiarities.rst  putting_vinyl_on_port_80.rst  starting_varnish.rst
doc/sphinx/users-guide/: command-line.rst  compression.rst  devicedetection.rst  esi.rst  increasing-your-hitrate.rst  intro.rst  operation-logging.rst  operation-statistics.rst  params.rst  purging.rst  run_cli.rst  run_security.rst  sizing-your-cache.rst  storage-backends.rst  troubleshooting.rst  vcl-backends.rst  vcl-built-in-code.rst  vcl-separate.rst  vcl-variables.rst  vcl.rst
doc/sphinx/whats-new/: changes-6.0.rst  changes-6.2.rst  changes-6.3.rst  changes-6.4.rst  changes-6.5.rst  changes-6.6.rst  changes-7.0.rst  changes-7.1.rst  changes-7.2.rst  changes-7.3.rst  changes-7.4.rst  changes-7.5.rst  changes-7.6.rst  changes-7.7.rst  changes-8.0.rst  changes-9.0.rst  changes-trunk.rst  index.rst  relnote-5.0.rst  upgrading-5.0.rst  upgrading-5.1.rst  upgrading-5.2.rst  upgrading-6.0.rst  upgrading-6.1.rst  upgrading-6.2.rst  upgrading-8.0.rst  upgrading-9.0.rst  upgrading-trunk.rst
etc/: Makefile.am  devicedetect.vcl  example.vcl
etc/ca/: README.txt  dh3072.pem  dh7680.pem  h  index.txt  ocsp_mkfn.sh  openssl.cnf  private.ec.key  pub.pem
etc/ca/bundle/: cdnN.example.com.pem  client01.pem  ecc.example.com.pem  example.com.pem  foo.example.com.pem  no-san.example.com.pem  protected.example.com.pem  revoked.example.com.pem  testclient.pem  wildcard.example.com.pem
etc/ca/certs/: ca.cert.pem
etc/ca/newcerts/: 1000.pem
etc/ca/private/: ca.key.pem
include/: Makefile.am  vcli.h  vcli_serve.h  vcs.h  vct.h  vdef.h  vfil.h  vin.h  vnum.h  vqueue.h  vrt.h  vsc_priv.h  vsub.h  vtcp.h  vtim.h  vut_options.h
include/tbl/: cli_cmds.h  cli_flags.h  params.h  ssl_err.h  vsig_list.h  vsl_tags.h  vsl_tags_http.h  well_known_methods.h
include/vapi/: vsl_int.h
lib/: Makefile.am
lib/libvarnish/: vcli_serve.c  version.c  vin.c  vsub.c
lib/libvarnishapi/: vsl_glob_test.c
lib/libvcc/: vcc_backend.c  vcc_expr.c  vcc_utils.c
lib/libvinyl/: Makefile.am  flint.lnt  vas.c  vcli_serve.c  version.c  vin.c  vtim.c
lib/libvinylapi/: Makefile.am  daemon.c  generate.py  libvinylapi.map  vsl_glob_test.c  vsm.c
lib/libvsc/: VSC_lck.vsc  VSC_main.vsc  VSC_mempool.vsc  VSC_mgt.vsc  VSC_sma.vsc  VSC_smf.vsc  VSC_smu.vsc  VSC_vbe.vsc  VSC_vcp.vsc  VSC_waiter.vsc  vsctool.py
man/: Makefile.am
tools/: coverity-run  lsan.suppr  ubsan.suppr  vtc-bisect.sh  vtest.sh
tools/coccinelle/: vsl_setup_retire.cocci
vmod/: Makefile.am  VSC_debug.vsc  automake_boilerplate_tls.am  vmod_blob.vcc  vmod_cookie.vcc  vmod_debug.c  vmod_debug.vcc  vmod_debug_filters.c  vmod_debug_transport_reembarking_http1.c  vmod_debug_transport_vai.c  vmod_directors.vcc  vmod_h2.c  vmod_h2.vcc  vmod_proxy.vcc  vmod_purge.vcc  vmod_std.vcc  vmod_tls.c  vmod_tls.vcc  vmod_unix.vcc  vmod_vtc.c  vmod_vtc.vcc
vmod/tests/: blob_b00000.vtc  blob_b00001.vtc  blob_b00002.vtc  blob_b00003.vtc  blob_b00004.vtc  blob_b00005.vtc  blob_b00006.vtc  blob_b00007.vtc  blob_b00008.vtc  blob_b00009.vtc  blob_b00010.vtc  blob_b00011.vtc  blob_b00012.vtc  blob_b00013.vtc  blob_b00014.vtc  cookie_b00000.vtc  cookie_b00001.vtc  cookie_b00002.vtc  cookie_b00003.vtc  cookie_b00004.vtc  cookie_b00005.vtc  cookie_b00006.vtc  cookie_b00007.vtc  cookie_b00008.vtc  cookie_b00009.vtc  cookie_b00010.vtc  cookie_b00011.vtc  cookie_b00012.vtc  cookie_b00013.vtc  cookie_r00028.vtc  cookie_v00000.vtc  directors_b00000.vtc  directors_b00001.vtc  directors_b00002.vtc  directors_b00003.vtc  directors_b00004.vtc  directors_b00005.vtc  directors_b00006.vtc  directors_b00007.vtc  directors_c00000.vtc  (+48 more)
